--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,10 @@
 spring:
+  artemis:
+    mode: native
+    host: 127.0.0.1
+    port: 61616
+    user: admin
+    password: admin
   application:
     name: catalog-service
 
