--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,12 @@
 spring:
-  artemis:
-    mode: native
-    host: 127.0.0.1
-    port: 61616
-    user: admin
-    password: admin
   application:
     name: catalog-service
 
-logging:
-  level:
-    "[com.netflix.discovery]": OFF
-
 server:
-  port: 8082
+  port: 8080
+
+com.example:
+  movie-resource:
+    location: http://movie-resource-service:8080
+  rating-resource:
+    location: http://rating-resource-service:8080
