--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,9 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<image>
+						<name>skullgnammer/${project.artifactId}:latest</name>
+					</image>
 				</configuration>
 			</plugin>
 		</plugins>
